--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,8 @@ h2 {
 
 #logo {
     float: left;
-    font-size: 280%
+    font-size: 280%;
+
 }
 
 #menu {
@@ -55,4 +56,32 @@ h2 {
 
 .active {
     border-bottom: 1px solid #3a3a3a;
+}
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url(../images/hero-image.webp) no-repeat center center;
+    /*animates zoom effect on loading page*/
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+
+}
+
+/* creates the level of zoom for image */
+@keyframes hero-zoom {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.1);
+    }
 }
