--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,15 +120,12 @@ h2 {
     padding-top: 30px;
     width: 33%;
     float: left;
-    background-color: blue;
 }
 
 #right-about {
     padding-top: 30px;
     width: 33%;
     float: right;
-    background-color: silver;
-
 }
 
 #center-about {
@@ -137,4 +134,30 @@ h2 {
     margin: 0 auto;
     background-color: green;
 
+}
+
+hr {
+    border-top: 1px solid #3a3a3a;
+    width: 100%;
+    margin: 5px 0;
+}
+
+.club-ethos-heading {
+    width: 60%;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px
+}
+
+.left-about-heading {
+    float: right;
+}
+
+.right-about-heading {
+    float: left;
+}
+
+.right-about-heading h2,
+.right-about-heading p {
+    text-align: right
 }
