--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,6 @@ footer {
         clear: both;
         height: 150px;
         padding: 0;
-
     }
 }
 
@@ -311,5 +310,15 @@ footer {
     .right-about-heading p {
         padding: 0 20px;
         text-align: center;
+    }
+
+    #photos {
+        column-count: 3;
+    }
+}
+
+@media screen and (max-width:800px) {
+    #photos {
+        column-count: 2;
     }
 }
